hphp/hack/test/typecheck/async_hint2.php.exp
File "async_hint2.php", line 5, characters 39-41:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
